src/top/snapshots/zizq__top__ui__tests__render_connecting.snap
---
source: src/top/ui.rs
expression: "render_to_string(&app, 60, 10)"
---
  Zizq 0.1.0
● Connecting... 127.0.0.1:8901





   In-Flight   Ready   Scheduled
                       ID   PRIORITY    DURATION   ATTEMPTS
 ←/→ Switch tab  q Quit
