src/top/snapshots/zizq__top__ui__tests__render_free_tier_in_flight_tab.snap
---
source: src/top/ui.rs
expression: "render_to_string(&app, 120, 12)"
---
  Zizq 0.1.0
● Connected 127.0.0.1:8901
  Server version: 1.0.0, Uptime: 10s
  Queue: 2 in-flight, 5 ready, 0 scheduled
        ▼
  Depth[│││││││                                                                                                7 jobs]
        ▲
   In-Flight   Ready   Scheduled
                         ID   PRIORITY QUEUE              DURATION   ATTEMPTS TYPE
70a2bb46e1f07a0c908d7a2bb40          0 default                  3s          1 send_email
70a1aa35d0e06b0b807c691aa30          0 billing               2m30s          3 charge
 n/p Tabs  ←↑→↓ Scroll  q Quit
