src/top/snapshots/zizq__top__ui__tests__render_free_tier_in_flight_tab_with_cap_message.snap
---
source: src/top/ui.rs
expression: "render_to_string(&app, 120, 12)"
---
  Zizq 0.1.0
● Connected 127.0.0.1:8901
  Server version: 1.0.0, Uptime: 10s
  Queue: 2 in-flight, 5 ready, 0 scheduled
        ▼
  Depth[│││││││                                                                                                7 jobs]
        ▲
   In-Flight   Ready   Scheduled

                                           The free tier is capped to 10 jobs.
                                       Upgrade to a pro license to see everything.
 n/p Tabs  ←↑→↓ Scroll  q Quit
