src/top/snapshots/zizq__top__ui__tests__render_in_flight_tab_narrow_scrolled.snap
---
source: src/top/ui.rs
expression: "render_to_string(&app, 80, 12)"
---
  Zizq 0.1.0
● Connected 127.0.0.1:8901
  Server version: 1.0.0, Uptime: 2m
  Queue: 2 in-flight, 2 ready

  Depth[││││                                                           4 jobs]

   In-Flight   Ready   Scheduled
     ID   PRIORITY QUEUE              DURATION   ATTEMPTS TYPE
7a2bb40          0 default                  3s          1 generate_annual_report
691aa30          0 billing               2m30s          3 charge_subscription
 n/p Switch tab  ←/→ Scroll  q Quit
